[package]
name = "ip_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
simple_logger = "2.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
ipnet = "2.5.0"
serde_json = "1.0.81"
[dependencies.ip2region]
git = "https://github.com/lionsoul2014/ip2region"
version = "*"
features = ["lazy"]
